update lib and program
Signed-off-by: Jess Frazelle <acidburn@microsoft.com>

--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -29,4 +29,5 @@
 
 [[override]]
   name ="github.com/cilium/cilium"
-  branch = "master"
+  source = "github.com/jessfraz/cilium"
+  branch = "add-prog-syscalls"
