--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,11 @@
 language: go
-sudo: false
+sudo: true
 go:
   - 1.10.x
 before_install:
+  - echo "deb http://us.archive.ubuntu.com/ubuntu/ xenial main" | sudo tee -a /etc/apt/sources.list
+  - sudo apt-get -qq update
+  - sudo apt-get install -y -t xenial linux-libc-dev
   - go get github.com/golang/lint/golint
   - go get honnef.co/go/tools/cmd/staticcheck
 jobs:
